# banzai

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
bnz/: Cargo.toml  README.md
bnz/src/: main.rs
crates/bnz/: Cargo.toml
crates/bnz/src/: main.rs
debug/: bwt.py  rle1.py
fuzz/: Cargo.toml
fuzz/fuzz_targets/: encode.rs  round_trip.rs
lib/: bwt.rs  crc32.rs  huffman.rs  lib.rs  rle.rs
src/: bwt.rs  crc32.rs  huffman.rs  lib.rs  main.rs  mtf.rs  out.rs  rle.rs
