[package]
name = "banzai"
version = "0.2.6"
description = "A pure Rust bzip2 encoder"
repository = "https://github.com/jgbyrne/banzai/"

readme = "README.md"
license = "MIT"

edition = "2021"
authors = ["Jack Byrne <jgbyrne9@gmail.com>"]

keywords = ["bzip2"]
categories = ["compression"]

exclude = ["/debug"]

[lib]
path = "lib/lib.rs"

[workspace]
members = ["bnz"]

[dependencies]
crc = "3.0"
