[package]
name = "bnz"
version = "0.3.1"
description = "bnz: a command-line interface to the banzai libre bzip2 encoder"
repository = "https://github.com/jgbyrne/banzai/tree/master/bnz/"

readme = "README.md"
license = "MIT"

edition = "2021"
authors = ["Jack Byrne <jgbyrne9@gmail.com>"]

keywords = ["bzip2"]
categories = ["command-line-utilities", "compression"]

[[bin]]
path = "src/main.rs"
name = "bnz"

[dependencies]
banzai = { version = "0.3.1", path = "../" }
